--- a/src/fe/package.json
+++ b/src/fe/package.json
@@ -15,6 +15,7 @@
     "@types/react-lazylog": "^4.5.0",
     "debug": "^4.3.1",
     "dockerode": "^3.3.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lazylog": "^4.5.3",
