--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "author": "Ondrej Maksi <ondrej.maksi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node --project tsconfig.json index.ts",
+    "start": "ts-node-dev --project tsconfig.json index.ts",
     "start-prod": "node ./build/index.js",
     "build": "tsc --project tsconfig.json",
     "tsc-lint": "tsc -noemit -p tsconfig.json"
@@ -28,6 +28,6 @@
   },
   "devDependencies": {
     "jest": "26.6.0",
-    "ts-node": "^10.0.0"
+    "ts-node-dev": "^1.1.8"
   }
 }
