--- a/src/fe/package.json
+++ b/src/fe/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-json-view": "^1.21.3",
     "react-lazylog": "^4.5.3",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.4",
